--- a/galaxy/xfce4-pulseaudio-plugin/.artixlinux/pkgbase.yaml
+++ b/galaxy/xfce4-pulseaudio-plugin/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: xfce4-pulseaudio-plugin
-  version: 0.4.9-2
+  version: 0.5.0-1
   arch:
     - x86_64
   pkgname:
     - xfce4-pulseaudio-plugin
 actions:
   addRepo: galaxy
-  removeRepo: galaxy-gremlins
-  triggersBuild: false
+  removeRepo: null
+  triggersBuild: true
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: true
+  triggersRepoRemove: false
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -49,7 +49,7 @@ repos:
     version: null
     packages: []
   galaxy:
-    version: 0.4.9-2
+    version: 0.5.0-1
     packages:
-      - xfce4-pulseaudio-plugin-0.4.9-2-x86_64.pkg.tar.zst
+      - xfce4-pulseaudio-plugin-0.5.0-1-x86_64.pkg.tar.zst
 team: galaxy
