--- a/galaxy/xfce4-pulseaudio-plugin/PKGBUILD
+++ b/galaxy/xfce4-pulseaudio-plugin/PKGBUILD
@@ -1,43 +1,33 @@
-# Maintainer: Evangelos Foutras <foutrelis@archlinux.org>
-# Maintainer: Robin Candau <antiz@archlinux.org>
+# Maintainer: Cory Sanin <corysanin@artixlinux.org>
+# Contributor: Evangelos Foutras <foutrelis@archlinux.org>
+# Contributor: Robin Candau <antiz@archlinux.org>
 # Contributor: Jan de Groot <jgc@archlinux.org>
 # Contributor: NicoHood <archlinux {cat} nicohood {dog} de>
 # Contributor: <alcasa dot mz at gmail dot com>
 # Contributor: twa022 <twa022 at gmail dot com>
 
 pkgname=xfce4-pulseaudio-plugin
-pkgver=0.4.9
-pkgrel=2
+pkgver=0.5.0
+pkgrel=1
 pkgdesc="Pulseaudio plugin for the Xfce4 panel"
 arch=('x86_64')
 url="https://docs.xfce.org/panel-plugins/xfce4-pulseaudio-plugin/start"
 license=('GPL-2.0-or-later')
 groups=('xfce4-goodies')
 depends=('xfce4-panel' 'libpulse' 'libkeybinder3' 'libnotify' 'libcanberra')
-makedepends=('git' 'xfce4-dev-tools')
+makedepends=('git' 'meson' 'xfce4-dev-tools')
 optdepends=('pavucontrol: default pulseaudio mixer')
 source=("git+https://gitlab.xfce.org/panel-plugins/xfce4-pulseaudio-plugin.git#tag=$pkgname-$pkgver")
-sha256sums=('b686b469b699c073e838e04382bab2282aff13cb1a2086065b38c8c5f673d934')
-
-prepare() {
-  cd $pkgname
-  NOCONFIGURE=1 ./autogen.sh
-}
+sha256sums=('84deb7d89f8703da3df6a89880a455ed36ca0b1a899db4dee3c64dedcec41922')
 
 build() {
-  cd $pkgname
-  ./configure \
-    --prefix=/usr \
-    --sysconfdir=/etc \
-    --libexecdir=/usr/lib \
-    --localstatedir=/var \
-    --enable-maintainer-mode
-  make
+  artix-meson $pkgname build \
+    --localstatedir=/var
+  meson compile -C build
 }
 
 package() {
-  cd $pkgname
-  make DESTDIR="$pkgdir" install
+  meson install -C build --destdir "$pkgdir"
 }
 
 # vim:set ts=2 sw=2 et:
