--- a/world/upower/.artixlinux/pkgbase.yaml
+++ b/world/upower/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: upower
-  version: 1.90.8-1
+  version: 1.90.9-1
   arch:
     - x86_64
   pkgname:
     - upower
 actions:
   addRepo: world
-  removeRepo: world-gremlins
-  triggersBuild: false
+  removeRepo: null
+  triggersBuild: true
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: true
+  triggersRepoRemove: false
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 1.90.8-1
+    version: 1.90.9-1
     packages:
-      - upower-1.90.8-1-x86_64.pkg.tar.zst
+      - upower-1.90.9-1-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
