--- a/world/libnewt/.artixlinux/pkgbase.yaml
+++ b/world/libnewt/.artixlinux/pkgbase.yaml
@@ -8,11 +8,11 @@ pkgbase:
     - libnewt
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-goblins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -25,9 +25,8 @@ repos:
     version: null
     packages: []
   world-goblins:
-    version: 0.52.25-1
-    packages:
-      - libnewt-0.52.25-1-x86_64.pkg.tar.zst
+    version: null
+    packages: []
   world-gremlins:
     version: null
     packages: []
