--- a/world/apparmor/.artixlinux/pkgbase.yaml
+++ b/world/apparmor/.artixlinux/pkgbase.yaml
@@ -1,7 +1,7 @@
 ---
 pkgbase:
   name: apparmor
-  version: 4.0.3-3
+  version: 4.1.0-2
   arch:
     - x86_64
   pkgname:
@@ -25,15 +25,16 @@ repos:
     version: null
     packages: []
   world-goblins:
-    version: null
-    packages: []
+    version: 4.1.0-2
+    packages:
+      - apparmor-4.1.0-2-x86_64.pkg.tar.zst
   world-gremlins:
     version: null
     packages: []
   world:
-    version: 4.0.3-3
+    version: 4.1.0-1
     packages:
-      - apparmor-4.0.3-3-x86_64.pkg.tar.zst
+      - apparmor-4.1.0-1-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
