--- a/world/gjs/.artixlinux/pkgbase.yaml
+++ b/world/gjs/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: gjs
-  version: 2:1.84.1-1
+  version: 2:1.84.2-1
   arch:
     - x86_64
   pkgname:
     - gjs
 actions:
   addRepo: world
-  removeRepo: world-gremlins
-  triggersBuild: false
+  removeRepo: null
+  triggersBuild: true
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: true
+  triggersRepoRemove: false
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 2:1.84.1-1
+    version: 2:1.84.2-1
     packages:
-      - gjs-2:1.84.1-1-x86_64.pkg.tar.zst
+      - gjs-2:1.84.2-1-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
