--- a/world/mutter/.artixlinux/pkgbase.yaml
+++ b/world/mutter/.artixlinux/pkgbase.yaml
@@ -1,7 +1,7 @@
 ---
 pkgbase:
   name: mutter
-  version: 48.1-1
+  version: 48.2-1
   arch:
     - x86_64
   pkgname:
@@ -9,11 +9,11 @@ pkgbase:
     - mutter-docs
 actions:
   addRepo: world
-  removeRepo: world-gremlins
-  triggersBuild: false
+  removeRepo: null
+  triggersBuild: true
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: true
+  triggersRepoRemove: false
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -32,10 +32,10 @@ repos:
     version: null
     packages: []
   world:
-    version: 48.1-1
+    version: 48.2-1
     packages:
-      - mutter-48.1-1-x86_64.pkg.tar.zst
-      - mutter-docs-48.1-1-x86_64.pkg.tar.zst
+      - mutter-48.2-1-x86_64.pkg.tar.zst
+      - mutter-docs-48.2-1-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
