--- a/world/python-acme/.artixlinux/pkgbase.yaml
+++ b/world/python-acme/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: python-acme
-  version: 3.3.0-2
+  version: 4.0.0-1
   arch:
     - any
   pkgname:
     - python-acme
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 3.3.0-2
+    version: 4.0.0-1
     packages:
-      - python-acme-3.3.0-2-any.pkg.tar.zst
+      - python-acme-4.0.0-1-any.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
