--- a/galaxy/certbot/.artixlinux/pkgbase.yaml
+++ b/galaxy/certbot/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: certbot
-  version: 3.3.0-2
+  version: 4.0.0-1
   arch:
     - any
   pkgname:
     - certbot
 actions:
   addRepo: galaxy
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: galaxy-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -49,7 +49,7 @@ repos:
     version: null
     packages: []
   galaxy:
-    version: 3.3.0-2
+    version: 4.0.0-1
     packages:
-      - certbot-3.3.0-2-any.pkg.tar.zst
+      - certbot-4.0.0-1-any.pkg.tar.zst
 team: galaxy
