--- a/galaxy/certbot-dns-linode/.artixlinux/pkgbase.yaml
+++ b/galaxy/certbot-dns-linode/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: certbot-dns-linode
-  version: 3.3.0-1
+  version: 4.0.0-1
   arch:
     - any
   pkgname:
     - certbot-dns-linode
 actions:
   addRepo: galaxy
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: galaxy-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -49,7 +49,7 @@ repos:
     version: null
     packages: []
   galaxy:
-    version: 3.3.0-1
+    version: 4.0.0-1
     packages:
-      - certbot-dns-linode-3.3.0-1-any.pkg.tar.zst
+      - certbot-dns-linode-4.0.0-1-any.pkg.tar.zst
 team: galaxy
