--- a/galaxy/mpd/.artixlinux/pkgbase.yaml
+++ b/galaxy/mpd/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: mpd
-  version: 0.24.3-1
+  version: 0.24.3-2
   arch:
     - x86_64
   pkgname:
     - mpd
 actions:
   addRepo: galaxy
-  removeRepo: galaxy-gremlins
-  triggersBuild: false
+  removeRepo: null
+  triggersBuild: true
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: true
+  triggersRepoRemove: false
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -49,7 +49,7 @@ repos:
     version: null
     packages: []
   galaxy:
-    version: 0.24.3-1
+    version: 0.24.3-2
     packages:
-      - mpd-0.24.3-1-x86_64.pkg.tar.zst
+      - mpd-0.24.3-2-x86_64.pkg.tar.zst
 team: galaxy
