--- a/lib32/lib32-pipewire/.artixlinux/pkgbase.yaml
+++ b/lib32/lib32-pipewire/.artixlinux/pkgbase.yaml
@@ -10,12 +10,12 @@ pkgbase:
     - lib32-pipewire-jack
     - lib32-pipewire-v4l2
 actions:
-  addRepo: lib32
-  removeRepo: null
-  triggersBuild: true
+  addRepo: null
+  removeRepo: lib32-gremlins
+  triggersBuild: false
   triggersRebuild: false
-  triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoAdd: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -40,12 +40,8 @@ repos:
     version: null
     packages: []
   lib32-gremlins:
-    version: 1:1.4.1-1.1
-    packages:
-      - lib32-pipewire-1:1.4.1-1.1-x86_64.pkg.tar.zst
-      - lib32-libpipewire-1:1.4.1-1.1-x86_64.pkg.tar.zst
-      - lib32-pipewire-jack-1:1.4.1-1.1-x86_64.pkg.tar.zst
-      - lib32-pipewire-v4l2-1:1.4.1-1.1-x86_64.pkg.tar.zst
+    version: null
+    packages: []
   lib32:
     version: 1:1.4.1-1.1
     packages:
