--- a/world/c-ares/.artixlinux/pkgbase.yaml
+++ b/world/c-ares/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: c-ares
-  version: 1.34.4-1
+  version: 1.34.5-1
   arch:
     - x86_64
   pkgname:
     - c-ares
 actions:
   addRepo: world
-  removeRepo: world-gremlins
-  triggersBuild: false
+  removeRepo: null
+  triggersBuild: true
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: true
+  triggersRepoRemove: false
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 1.34.4-1
+    version: 1.34.5-1
     packages:
-      - c-ares-1.34.4-1-x86_64.pkg.tar.zst
+      - c-ares-1.34.5-1-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
