--- a/world/hiredis/.artixlinux/pkgbase.yaml
+++ b/world/hiredis/.artixlinux/pkgbase.yaml
@@ -1,7 +1,7 @@
 ---
 pkgbase:
   name: hiredis
-  version: 1.2.0-2
+  version: 1.2.0-3
   arch:
     - x86_64
   pkgname:
@@ -28,12 +28,13 @@ repos:
     version: null
     packages: []
   world-gremlins:
-    version: null
-    packages: []
-  world:
-    version: 1.2.0-2
+    version: 1.2.0-3
     packages:
-      - hiredis-1.2.0-2-x86_64.pkg.tar.zst
+      - hiredis-1.2.0-3-x86_64.pkg.tar.zst
+  world:
+    version: 1.2.0-3
+    packages:
+      - hiredis-1.2.0-3-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
@@ -52,3 +53,4 @@ repos:
   galaxy:
     version: null
     packages: []
+team: world
