--- a/world/netpbm/.artixlinux/pkgbase.yaml
+++ b/world/netpbm/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: netpbm
-  version: 10.86.45-1
+  version: 10.86.46-1
   arch:
     - x86_64
   pkgname:
     - netpbm
 actions:
   addRepo: world
-  removeRepo: world-gremlins
-  triggersBuild: false
+  removeRepo: null
+  triggersBuild: true
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: true
+  triggersRepoRemove: false
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 10.86.45-1
+    version: 10.86.46-1
     packages:
-      - netpbm-10.86.45-1-x86_64.pkg.tar.zst
+      - netpbm-10.86.46-1-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
