--- a/world/alsa-tools/.artixlinux/pkgbase.yaml
+++ b/world/alsa-tools/.artixlinux/pkgbase.yaml
@@ -1,7 +1,7 @@
 ---
 pkgbase:
   name: alsa-tools
-  version: 1.2.11-1
+  version: 1.2.14-1
   arch:
     - x86_64
   pkgname:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 1.2.11-1
+    version: 1.2.14-1
     packages:
-      - alsa-tools-1.2.11-1-x86_64.pkg.tar.zst
+      - alsa-tools-1.2.14-1-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
@@ -52,3 +52,4 @@ repos:
   galaxy:
     version: null
     packages: []
+team: world
