--- a/world/vorbis-tools/.artixlinux/pkgbase.yaml
+++ b/world/vorbis-tools/.artixlinux/pkgbase.yaml
@@ -1,14 +1,14 @@
 ---
 pkgbase:
   name: vorbis-tools
-  version: 1.4.2-6
+  version: 1.4.3-1
   arch:
     - x86_64
   pkgname:
     - vorbis-tools
 actions:
   addRepo: world
-  removeRepo: world-goblins
+  removeRepo: world-gremlins
   triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 1.4.2-6
+    version: 1.4.3-1
     packages:
-      - vorbis-tools-1.4.2-6-x86_64.pkg.tar.zst
+      - vorbis-tools-1.4.3-1-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
