--- a/galaxy/mugshot/PKGBUILD
+++ b/galaxy/mugshot/PKGBUILD
@@ -5,12 +5,12 @@
 
 pkgname=mugshot
 pkgver=0.4.3
-pkgrel=4
+pkgrel=5
 pkgdesc="User Management Utility for Linux"
 url="https://github.com/bluesabre/mugshot"
 arch=('any')
 license=('GPL-3.0-only')
-depends=('gtk3' 'python' 'python-pexpect' 'python-cairo' 'python-gobject' 'accountsservice' 'hicolor-icon-theme')
+depends=('gtk3' 'python' 'python-pexpect' 'python-cairo' 'python-gobject' 'accountsservice' 'hicolor-icon-theme' 'which')
 makedepends=('git' 'python-build' 'python-installer' 'python-wheel' 'python-distutils-extra' 'intltool')
 optdepends=('cheese: webcam support'
             'pidgin: update buddy icon'
