--- a/world/cmus/.artixlinux/pkgbase.yaml
+++ b/world/cmus/.artixlinux/pkgbase.yaml
@@ -1,14 +1,14 @@
 ---
 pkgbase:
   name: cmus
-  version: 2.12.0-2
+  version: 2.12.0-3
   arch:
     - x86_64
   pkgname:
     - cmus
 actions:
   addRepo: world
-  removeRepo: world-goblins
+  removeRepo: world-gremlins
   triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 2.12.0-2
+    version: 2.12.0-3
     packages:
-      - cmus-2.12.0-2-x86_64.pkg.tar.zst
+      - cmus-2.12.0-3-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
