--- a/world/sysprof/PKGBUILD
+++ b/world/sysprof/PKGBUILD
@@ -12,7 +12,7 @@ pkgname=(
   libsysprof-capture
 )
 pkgver=48.0
-pkgrel=3
+pkgrel=4
 pkgdesc="Kernel based performance profiler"
 url="https://apps.gnome.org/Sysprof/"
 license=(GPL-3.0-or-later)
@@ -48,13 +48,25 @@ b2sums=('87dd3a47350b0e2d2d15072fcaef53578e4614b9c14a1f4ac3ff83233538adbc3486b55
 prepare() {
   cd sysprof
 
-  # Window activation fixes
+  # Always present existing window on activation
   # https://gitlab.gnome.org/GNOME/sysprof/-/merge_requests/130
   git cherry-pick -n 7db526fbd9739f714f2d563f1fb65ec7695bb1d2
+
+  # Implement new-window action
   # https://gitlab.gnome.org/GNOME/sysprof/-/merge_requests/133
   git cherry-pick -n e925428d333fe4229e939b6c2923c515278169fe
+
+  # Present the active window on activation
   # https://gitlab.gnome.org/GNOME/sysprof/-/merge_requests/132
   git cherry-pick -n b5459370d778054360bb8faf9a5599d058dd42de
+
+  # Add "greeter" command-line option
+  # https://gitlab.gnome.org/GNOME/sysprof/-/merge_requests/135
+  git cherry-pick -n 660953d3d77825c2e68881a9bb409e267f4c13f7
+
+  # Add D-Bus service file
+  # https://gitlab.gnome.org/GNOME/sysprof/-/merge_requests/138
+  git cherry-pick -n 300bf1a13b1ab13330152307454cdbcb52c7178d
 }
 
 build() {
