--- a/world/apparmor/.artixlinux/pkgbase.yaml
+++ b/world/apparmor/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: apparmor
-  version: 4.1.0-2
+  version: 4.1.0-3
   arch:
     - x86_64
   pkgname:
     - apparmor
 actions:
   addRepo: world
-  removeRepo: world-gremlins
-  triggersBuild: false
+  removeRepo: null
+  triggersBuild: true
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: true
+  triggersRepoRemove: false
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -32,9 +32,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 4.1.0-1
+    version: 4.1.0-3
     packages:
-      - apparmor-4.1.0-1-x86_64.pkg.tar.zst
+      - apparmor-4.1.0-3-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
