--- a/world/libheif/.artixlinux/pkgbase.yaml
+++ b/world/libheif/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: libheif
-  version: 1.19.7-2
+  version: 1.19.7-3
   arch:
     - x86_64
   pkgname:
     - libheif
 actions:
   addRepo: world
-  removeRepo: world-gremlins
-  triggersBuild: false
+  removeRepo: null
+  triggersBuild: true
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: true
+  triggersRepoRemove: false
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 1.19.7-2
+    version: 1.19.7-3
     packages:
-      - libheif-1.19.7-2-x86_64.pkg.tar.zst
+      - libheif-1.19.7-3-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
