--- a/world/lxcfs/.artixlinux/pkgbase.yaml
+++ b/world/lxcfs/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: lxcfs
-  version: 6.0.3-2
+  version: 6.0.4-1
   arch:
     - x86_64
   pkgname:
     - lxcfs
 actions:
   addRepo: world
-  removeRepo: world-gremlins
-  triggersBuild: false
+  removeRepo: null
+  triggersBuild: true
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: true
+  triggersRepoRemove: false
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 6.0.3-2
+    version: 6.0.4-1
     packages:
-      - lxcfs-6.0.3-2-x86_64.pkg.tar.zst
+      - lxcfs-6.0.4-1-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
