--- a/world/qt6-tools/.artixlinux/pkgbase.yaml
+++ b/world/qt6-tools/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: qt6-tools
-  version: 6.9.0-1
+  version: 6.9.0-2
   arch:
     - x86_64
   pkgname:
     - qt6-tools
 actions:
   addRepo: world
-  removeRepo: world-gremlins
-  triggersBuild: false
+  removeRepo: null
+  triggersBuild: true
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: true
+  triggersRepoRemove: false
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 6.9.0-1
+    version: 6.9.0-2
     packages:
-      - qt6-tools-6.9.0-1-x86_64.pkg.tar.zst
+      - qt6-tools-6.9.0-2-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
