--- a/world/qutebrowser/.artixlinux/pkgbase.yaml
+++ b/world/qutebrowser/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: qutebrowser
-  version: 3.4.0-1
+  version: 3.5.0-1
   arch:
     - any
   pkgname:
     - qutebrowser
 actions:
   addRepo: world
-  removeRepo: world-gremlins
-  triggersBuild: false
+  removeRepo: null
+  triggersBuild: true
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: true
+  triggersRepoRemove: false
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 3.4.0-1
+    version: 3.5.0-1
     packages:
-      - qutebrowser-3.4.0-1-any.pkg.tar.zst
+      - qutebrowser-3.5.0-1-any.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
