--- a/world/virtualbox-host-modules-artix/.artixlinux/pkgbase.yaml
+++ b/world/virtualbox-host-modules-artix/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: virtualbox-host-modules-artix
-  version: 7.1.6-15
+  version: 7.1.8-1
   arch:
     - x86_64
   pkgname:
     - virtualbox-host-modules-artix
 actions:
   addRepo: world
-  removeRepo: world-gremlins
-  triggersBuild: false
+  removeRepo: null
+  triggersBuild: true
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: true
+  triggersRepoRemove: false
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 7.1.6-15
+    version: 7.1.8-1
     packages:
-      - virtualbox-host-modules-artix-7.1.6-15-x86_64.pkg.tar.zst
+      - virtualbox-host-modules-artix-7.1.8-1-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
