--- a/system/gzip/.artixlinux/pkgbase.yaml
+++ b/system/gzip/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: gzip
-  version: 1.13-4
+  version: 1.14-1
   arch:
     - x86_64
   pkgname:
     - gzip
 actions:
   addRepo: system
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: system-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -22,9 +22,9 @@ repos:
     version: null
     packages: []
   system:
-    version: 1.13-4
+    version: 1.14-1
     packages:
-      - gzip-1.13-4-x86_64.pkg.tar.zst
+      - gzip-1.14-1-x86_64.pkg.tar.zst
   world-goblins:
     version: null
     packages: []
