--- a/galaxy/evisum/.artixlinux/pkgbase.yaml
+++ b/galaxy/evisum/.artixlinux/pkgbase.yaml
@@ -2,18 +2,18 @@
 team: galaxy
 pkgbase:
   name: evisum
-  version: 0.6.3-1
+  version: 0.6.4-1
   arch:
     - x86_64
   pkgname:
     - evisum
 actions:
   addRepo: galaxy
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: galaxy-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -50,6 +50,6 @@ repos:
     version: null
     packages: []
   galaxy:
-    version: 0.6.3-1
+    version: 0.6.4-1
     packages:
-      - evisum-0.6.3-1-x86_64.pkg.tar.zst
+      - evisum-0.6.4-1-x86_64.pkg.tar.zst
