--- a/world/dkms/.artixlinux/pkgbase.yaml
+++ b/world/dkms/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: dkms
-  version: 3.1.7-2
+  version: 3.1.8-1
   arch:
     - any
   pkgname:
     - dkms
 actions:
   addRepo: world
-  removeRepo: world-gremlins
-  triggersBuild: false
+  removeRepo: null
+  triggersBuild: true
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: true
+  triggersRepoRemove: false
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 3.1.7-2
+    version: 3.1.8-1
     packages:
-      - dkms-3.1.7-2-any.pkg.tar.zst
+      - dkms-3.1.8-1-any.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
