--- a/world/virglrenderer/.artixlinux/pkgbase.yaml
+++ b/world/virglrenderer/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: virglrenderer
-  version: 1.0.1-2
+  version: 1.1.1-1
   arch:
     - x86_64
   pkgname:
     - virglrenderer
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 1.0.1-2
+    version: 1.1.1-1
     packages:
-      - virglrenderer-1.0.1-2-x86_64.pkg.tar.zst
+      - virglrenderer-1.1.1-1-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
