--- a/world/exempi/.artixlinux/pkgbase.yaml
+++ b/world/exempi/.artixlinux/pkgbase.yaml
@@ -1,7 +1,7 @@
 ---
 pkgbase:
   name: exempi
-  version: 2.6.5-1
+  version: 2.6.6-1
   arch:
     - x86_64
   pkgname:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 2.6.5-1
+    version: 2.6.6-1
     packages:
-      - exempi-2.6.5-1-x86_64.pkg.tar.zst
+      - exempi-2.6.6-1-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
@@ -52,3 +52,4 @@ repos:
   galaxy:
     version: null
     packages: []
+team: world
