--- a/world/gedit/PKGBUILD
+++ b/world/gedit/PKGBUILD
@@ -1,23 +1,22 @@
-# Maintainer: Jan Alexander Steffens (heftig) <heftig@archlinux.org>
-# Maintainer: Fabian Bornschein <fabiscafe@archlinux.org>
+# Maintainer: Balló György <ballogyor+arch at gmail dot com>
+# Contributor: Jan Alexander Steffens (heftig) <heftig@archlinux.org>
+# Contributor: Fabian Bornschein <fabiscafe@archlinux.org>
 # Contributor: Jan de Groot <jgc@archlinux.org>
 
 pkgname=gedit
-pkgver=48.1
-pkgrel=3
-pkgdesc="Easy-to-use general-purpose text editor"
-url="https://gedit-text-editor.org/"
+pkgver=48.2
+pkgrel=1
+pkgdesc='Easy-to-use general-purpose text editor'
 arch=(x86_64)
+url='https://gedit-text-editor.org/'
 license=(GPL-2.0-or-later)
 depends=(
-  bash
   cairo
   dconf
   gcc-libs
   gdk-pixbuf2
   glib2
   glibc
-  gobject-introspection-runtime
   gsettings-desktop-schemas
   gspell
   gtk3
@@ -26,48 +25,51 @@ depends=(
   libgedit-gfls
   libgedit-gtksourceview
   libgedit-tepl
-  libgirepository
   libpeas
   pango
 )
 makedepends=(
   appstream
-  appstream-glib
-  desktop-file-utils
   git
   glib2-devel
   gobject-introspection
   gtk-doc
+  itstool
   meson
-  python-gobject
-  vala
-  yelp-tools
 )
-optdepends=('gedit-plugins: Additional features'
-            'python-gobject: Python extension support')
-conflicts=('gedit-code-assistance<=3.16.0+4+gd19b879-1')
+optdepends=('gedit-plugins: Additional features')
 source=(
-  "git+https://gitlab.gnome.org/GNOME/gedit.git#tag=${pkgver/[a-z]/.&}"
-  "git+https://gitlab.gnome.org/GNOME/libgd.git"
+  "git+https://gitlab.gnome.org/GNOME/gedit.git?signed#tag=${pkgver/[a-z]/.&}"
+  git+https://gitlab.gnome.org/GNOME/libgd.git
+  gedit-new-tab.patch
+  gedit-prgname.patch
 )
-b2sums=('ed42c57aeac7bfd5d6f3b5ae17af8060698d515c5f2fbfc815a8eb530e27b8bc506e0090025250945aa425b27921a71f7b7635bb09a6d1884287f324c9a0efd4'
-        'SKIP')
+b2sums=(
+  4a31442beea7d5b21a4ad89295672b8e7839efb27c9d0c72a9177a8baecd849ae0b801e82b748ec2b4e5a947dcbd4f9fa7a3ee1b6383fcd864405e8dbd7db305
+  SKIP
+  3f30dde7f7141f2992f750fb01f215823f48c384c2e24d66d94d0471b99362024ed76512092e31e1703890d0e4e94384ab599be042405248807b5183ae1e6c1f
+  7a7a00699f32fdc6f3e7d64411c0e9158ae92cf1874de7d32cff0249e16368282e147a625897ae02f2ecf153db809619a87fa29beb7c0a4e4d16540053e2af80
+)
+validpgpkeys=(08C0A6B1A08310A45363B328426F014A261FD87F) # Sébastien Wilmet <swilmet@mailfence.com>
 
 prepare() {
-  cd gedit
+  cd $pkgname
 
   git submodule init
   git submodule set-url subprojects/libgd "$srcdir/libgd"
   git -c protocol.file.allow=always submodule update
+
+  # Don't create new tab unless requested
+  git apply -3 ../gedit-new-tab.patch
+
+  # Set prgname to application ID
+  git apply -3 ../gedit-prgname.patch
 }
 
 build() {
-  local meson_options=(
-    -D gtk_doc=true
+  artix-meson $pkgname build \
+    -D gtk_doc=true \
     -D require_all_tests=true
-  )
-
-  artix-meson gedit build "${meson_options[@]}"
   meson compile -C build
 }
 
