--- a/world/memray/PKGBUILD
+++ b/world/memray/PKGBUILD
@@ -1,7 +1,7 @@
 # Maintainer: Leonidas Spyropoulos <artafinde@archlinux.org>
 
 pkgname=memray
-pkgver=1.16.0
+pkgver=1.17.0
 pkgrel=1
 pkgdesc="A memory profiler for Python"
 arch=('x86_64')
@@ -9,8 +9,9 @@ url="https://github.com/bloomberg/memray"
 license=('Apache-2.0')
 depends=('python' 'libunwind' 'python-rich' 'python-jinja' 'lz4' 'ipython' 'python-textual')
 makedepends=('git' 'python-setuptools-scm' 'python-build' 'python-installer' 'python-wheel' 'cython' 'npm' 'python-pkgconfig')
+checkdepends=('npm' 'python-pytest' 'python-pytest-textual-snapshot')
 source=("git+$url.git#tag=v${pkgver}?signed")
-sha512sums=('f6685253ad8336eeaabc6a2adc6e2debec1983c832c404f8aa347409e3fd326078314bc7648d26a4f08807ce3cdbdf0575142de718c3cf3b3b1ac7ea35a0149c')
+sha512sums=('8eda6ef60fee8d927ecbe0a8b44c0389c617ed485f3cc51725f9247aeaebab1014f63694ef90fc09f7a2c57f49d96d2845f610a325a80c7a880d2620e904a8bf')
 validpgpkeys=('A035C8C19219BA821ECEA86B64E628F8D684696D') # Pablo Galindo Salgado <pablogsal@gmail.com>
 
 build() {
@@ -24,6 +25,19 @@ build() {
 
   make build
   python -m build --wheel --no-isolation
+}
+
+check() {
+  export PYTEST_ARGS="--ignore=tests/test_tui_reporter.py --ignore=tests/integration/test_attach.py"
+  cd ${pkgname}
+  python -m venv --system-site-packages test-env
+  test-env/bin/python -m installer dist/*.whl
+  test-env/bin/python -m pytest -vvv \
+    --log-cli-level=info -s \
+    --ignore=tests/integration/test_greenlet.py \
+    --ignore=tests/test_tui_reporter.py \
+    --ignore=tests/integration/test_attach.py \
+    tests
 }
 
 package() {
