Updated python-cairo - 1.28.0-1

--- a/world/python-cairo/.artixlinux/pkgbase.yaml
+++ b/world/python-cairo/.artixlinux/pkgbase.yaml
@@ -1,7 +1,7 @@
 ---
 pkgbase:
   name: python-cairo
-  version: 1.27.0-2
+  version: 1.28.0-1
   arch:
     - x86_64
   pkgname:
@@ -9,11 +9,11 @@ pkgbase:
     - python-cairo-docs
 actions:
   addRepo: world
-  removeRepo: world-gremlins
-  triggersBuild: false
+  removeRepo: null
+  triggersBuild: true
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: true
+  triggersRepoRemove: false
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -32,10 +32,10 @@ repos:
     version: null
     packages: []
   world:
-    version: 1.27.0-2
+    version: 1.28.0-1
     packages:
-      - python-cairo-1.27.0-2-x86_64.pkg.tar.zst
-      - python-cairo-docs-1.27.0-2-x86_64.pkg.tar.zst
+      - python-cairo-1.28.0-1-x86_64.pkg.tar.zst
+      - python-cairo-docs-1.28.0-1-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
