Updated python-aiobotocore - 2.21.1-1

--- a/world/python-aiobotocore/PKGBUILD
+++ b/world/python-aiobotocore/PKGBUILD
@@ -32,8 +32,7 @@ check() {
   # test_lambda uses moto.awslambda, which requires a running Docker service
   # See: https://github.com/spulec/moto/issues/3276
   pytest -m "not localonly" tests \
-      --ignore=tests/test_lambda.py
-      # Fails in Artix CI
+      --ignore=tests/test_lambda.py \
       --deselect tests/test_basic_s3.py::test_fail_proxy_request
 }
 
