Updated python-hypothesis - 6.131.6-1

--- a/world/python-hypothesis/.artixlinux/pkgbase.yaml
+++ b/world/python-hypothesis/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: python-hypothesis
-  version: 6.130.5-2
+  version: 6.131.6-1
   arch:
     - any
   pkgname:
     - python-hypothesis
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -28,13 +28,12 @@ repos:
     version: null
     packages: []
   world-gremlins:
-    version: 6.130.1-1
-    packages:
-      - python-hypothesis-6.130.1-1-any.pkg.tar.zst
+    version: null
+    packages: []
   world:
-    version: 6.130.5-2
+    version: 6.131.6-1
     packages:
-      - python-hypothesis-6.130.5-2-any.pkg.tar.zst
+      - python-hypothesis-6.131.6-1-any.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
