--- a/world/kdiamond/PKGBUILD
+++ b/world/kdiamond/PKGBUILD
@@ -4,7 +4,7 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=kdiamond
-pkgver=24.12.3
+pkgver=25.04.0
 pkgrel=1
 pkgdesc='A single player puzzle game'
 url='https://apps.kde.org/kdiamond/'
@@ -19,6 +19,7 @@ depends=(gcc-libs
          kcrash
          kdbusaddons
          ki18n
+         kiconthemes
          knotifications
          knotifyconfig
          kwidgetsaddons
@@ -29,7 +30,7 @@ makedepends=(extra-cmake-modules
 groups=(kde-applications
         kde-games)
 source=(https://download.kde.org/stable/release-service/$pkgver/src/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('b10e8110a1d122c387ff678030fb1f5e527fed8b603170663f23bd90d5955ed2'
+sha256sums=('04328eee9500b0285c79ff10fb518714ba2d9a6b2d2e9a991f5fd7c95c7b4ea8'
             'SKIP')
 validpgpkeys=(CA262C6C83DE4D2FB28A332A3A6A4DB839EAA6D7  # Albert Astals Cid <aacid@kde.org>
               F23275E4BF10AFC1DF6914A6DBD2CE893E2D1C87  # Christoph Feck <cfeck@kde.org>
