--- a/world/kigo/PKGBUILD
+++ b/world/kigo/PKGBUILD
@@ -4,7 +4,7 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=kigo
-pkgver=24.12.3
+pkgver=25.04.0
 pkgrel=1
 pkgdesc='An open-source implementation of the popular Go game'
 url='https://apps.kde.org/kigo/'
@@ -19,6 +19,7 @@ depends=(gcc-libs
          kcrash
          kdbusaddons
          ki18n
+         kiconthemes
          kio
          knewstuff
          ktextwidgets
@@ -32,7 +33,7 @@ makedepends=(extra-cmake-modules
 groups=(kde-applications
         kde-games)
 source=(https://download.kde.org/stable/release-service/$pkgver/src/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('11f5e9176baef6c84e4626622c8269b1dd3b80ab176a83e20c2c0ece37d5935b'
+sha256sums=('3874277aed3586b01b258a6c317fb44c2595c5e30ab529a15873aa5c7ed649be'
             'SKIP')
 validpgpkeys=(CA262C6C83DE4D2FB28A332A3A6A4DB839EAA6D7  # Albert Astals Cid <aacid@kde.org>
               F23275E4BF10AFC1DF6914A6DBD2CE893E2D1C87  # Christoph Feck <cfeck@kde.org>
