--- a/world/tokodon/.artixlinux/pkgbase.yaml
+++ b/world/tokodon/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: tokodon
-  version: 24.12.3-2
+  version: 25.04.0-2
   arch:
     - x86_64
   pkgname:
     - tokodon
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 24.12.3-2
+    version: 25.04.0-2
     packages:
-      - tokodon-24.12.3-2-x86_64.pkg.tar.zst
+      - tokodon-25.04.0-2-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
