Updated lxqt-wayland-session - 0.2.0-1

--- a/galaxy/lxqt-wayland-session/.artixlinux/pkgbase.yaml
+++ b/galaxy/lxqt-wayland-session/.artixlinux/pkgbase.yaml
@@ -2,18 +2,18 @@
 team: galaxy
 pkgbase:
   name: lxqt-wayland-session
-  version: 0.1.1-2
+  version: 0.2.0-1
   arch:
     - any
   pkgname:
     - lxqt-wayland-session
 actions:
   addRepo: galaxy
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: galaxy-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -50,6 +50,6 @@ repos:
     version: null
     packages: []
   galaxy:
-    version: 0.1.1-2
+    version: 0.2.0-1
     packages:
-      - lxqt-wayland-session-0.1.1-2-any.pkg.tar.zst
+      - lxqt-wayland-session-0.2.0-1-any.pkg.tar.zst
